ADDING the role based whitelisting in API key